@startuml
class Parser {
  + parseCommand(String) : Command
}

class RemoveFlashcardCommand {
  - int index
  - boolean isValid
  + execute(FlashcardList, Storage) : void
}

class FlashcardList {
  + getFlashcard(int) : Flashcard
  + removeFlashcard(int) : void
  + getSize() : int
}

class Storage {
  + writeToFile(FlashcardList) : void
}

class Ui {
  + invalidIndexRespond() : void
  + showFlashcardRemoved(Flashcard) : void
}

Parser --> RemoveFlashcardCommand
RemoveFlashcardCommand --> FlashcardList
RemoveFlashcardCommand --> Storage
RemoveFlashcardCommand --> Ui
@enduml

